<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_popup_frame"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/delete_item_confirm"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        />

    <!-- ボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/popup_delete_affiliate_button_rakuten"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button_rakuten"
            android:text="@string/button_buy_on_weburl1"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/popup_delete_affiliate_button_yahoo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/button_buy_on_weburl2"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/ic_button_yahoo"
            android:textSize="14dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/popup_delete_affiliate_button_add_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:height="35dp"
        android:background="@drawable/ic_button_regist"
        android:text="@string/button_add_to_buy_list"
        android:textColor="@android:color/white"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/popup_delete_affiliate_button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/close_dialog"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        />

    <!-- 広告欄  -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>