<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_popup_frame"
    >

    <TextView
        android:id="@+id/fragment_item_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/delete_item_notice_title"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        />

    <LinearLayout
        android:id="@+id/popup_notice_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorBorderLine"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="start"
                android:text="@string/edit_item_title_memo"
                android:textColor="@color/colorCloseText"
                android:textSize="14dp"
                />
            <TextView
                android:id="@+id/popup_delete_notice_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:text="１２３４５６７８９０１２３４５６７８９０１２３４５６７８９０１２３４５６７８９０"
                android:textColor="@color/colorNormal"
                android:textSize="14dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:text="@string/remain_days_display_label"
                android:textColor="@color/colorNormal"
                android:textSize="14dp"
                />
            <TextView
                android:id="@+id/popup_delete_notice_remain_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="999"
                android:textColor="@color/colorNormal"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/notify_item_unit"
                android:textColor="@color/colorNormal"
                android:textSize="14dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorBorderLine"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/delete_item_confirm"
        android:textColor="@color/colorAccent"
        android:textSize="14dp"
        android:visibility="gone"
        />

    <!-- ボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/popup_delete_notice_button_rakuten"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button_rakuten"
            android:text="@string/button_buy_on_weburl1"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/popup_delete_notice_button_yahoo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/button_buy_on_weburl2"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/ic_button_yahoo"
            android:textSize="14dp"
            android:layout_weight="1"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/popup_notice_delete_affiriate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/delete_item_notice_affiriate"
        android:textColor="@color/colorExclamation"
        android:textSize="12dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/popup_delete_notice_button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/close_dialog"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        />

    <!-- 広告欄  -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>